--- a/symposium.tex
+++ b/symposium.tex
@@ -267,7 +267,15 @@ These results suggest that the proposed method is effective in numerically appro
 \section{Conclusions and future works}
 \label{conclusions}
 
-TBD
+This paper presented both an idealized procedure and a numerical approximation procedure for solving continuous games of simultaneous decision that can be easily adapted to any number of players, objectives and solutions.
+The numerical approximation procedure was shown to be effective in finding a finite number of PSNEs for FlipIt with IE, which is a game with one single-objective player, one multi-objective player and three continuous decision variables in total.
+
+The approximations found exhibited a good distribution and a low noise level despite the reduced number of actual estimations.
+With this method, the analyst can obtain a visual representation of the game's equilibrium tendencies, even for cases where analytical solutions are not available.
+The proposed method represents an approach which may be intuitive for researchers in the field of computational optimization given that the EAs are not modified with game-theoretical-based fitness functions.
+Thus, we hope that the framework provided here can be used to guide the development of new, more efficient methods to solve any game theoretical models of simultaneous decision and continuous decision spaces.
+
+As future work, we plan to increase the method's computational efficiency by enhancing the intersection-computing algorithm, allowing for a finer grid, faster convergence, and, hopefully, a larger and less noisy number of estimations.
 
 \bibliographystyle{plain}
 \bibliography{symposium}
